# temp-mail-scraper

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: dependencies.py  exception_handlers.py  router.py
app/api/routes/: tempmail.py
app/api/schemas/: tempmail.py
app/core/: config.py  container.py  logging.py
app/domain/: exceptions.py  models.py  protocols.py
app/infrastructure/browser/: manager.py  settings.py
app/infrastructure/tempmail/: client.py  page_service.py  selectors.py  settings.py
app/services/: tempmail.py
